src/objects/ACCL__Account_Trade_Org_Hierarchy__c.object
<CustomObject>
    <description>Holds the details of the account hierarchy. From points to the higher trade org, to points to the lower trade org or store, The relation is time dependent.</description>
    <fields>
        <fullName>ACCL__Child_Account__c</fullName>
        <description>Reference to the business partner the relation is going to.</description>
        <label>Child Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Trade Org Hierarchies</relationshipLabel>
        <relationshipName>Account_Trade_Org_Child</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACCL__Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference from the business partner from which the relation is out going.</description>
        <label>Parent Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Trade Org Hierarchies (Parent Account)</relationshipLabel>
        <relationshipName>Account_Trade_Org_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Record_Link__c</fullName>
        <description>Link to the detail page of the Customer Trade Org Hierarchy record.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id, $Label.accl__record_link, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_From__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>From this date on the entry is valid.</description>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACCL__Valid_Thru__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>Until this date the entry is valid.</description>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Customer Trade Org Hierarchy</label>
    <nameField>
        <displayFormat>TOH-{0000}</displayFormat>
        <label>Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Trade Org Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACCL__Child_Parent_Account_Same</fullName>
        <active>true</active>
        <description>The Child Customer and the Parent Customer can&apos;t be the same.</description>
        <errorConditionFormula>ACCL__Child_Account__c =  ACCL__Parent_Account__c</errorConditionFormula>
        <errorMessage>The Child Customer and the Parent Customer can&apos;t be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Parent_Account_Not_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>OR (ISBLANK(ACCL__Parent_Account__c), ISNULL(ACCL__Parent_Account__c))</errorConditionFormula>
        <errorDisplayField>ACCL__Parent_Account__c</errorDisplayField>
        <errorMessage>The Parent Customer can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_should_be_same</fullName>
        <active>true</active>
        <errorConditionFormula>ACCL__Child_Account__r.ACCL__Sales_Org__c &lt;&gt; ACCL__Parent_Account__r.ACCL__Sales_Org__c</errorConditionFormula>
        <errorMessage>The Child Customer and the Parent Customer must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Valid_From_Valid_Thru_Validation</fullName>
        <active>true</active>
        <description>Valid From can&apos;t be later than Valid Thru.</description>
        <errorConditionFormula>ACCL__Valid_From__c &gt; ACCL__Valid_Thru__c</errorConditionFormula>
        <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
    </validationRules>
</CustomObject>